# agave-scheduler

./: Cargo.toml
.github/workflows/: ci.yml
.github/workflows/actions/rust-toolchain/: action.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: spec.rs
crates/external-scheduler/: Cargo.toml
crates/external-scheduler/src/: config.rs  control_thread.rs  main.rs  scheduler_thread.rs
crates/scheduler-batch/: Cargo.toml
crates/scheduler-batch/src/: jito_thread.rs  lib.rs  scheduler.rs  tip_program.rs
crates/scheduler-bridge/: Cargo.toml
crates/scheduler-bridge/src/: bindings.rs  test.rs
crates/scheduler-fifo/: Cargo.toml
crates/scheduler-fifo/src/: lib.rs
crates/scheduler-greedy/: Cargo.toml
crates/scheduler-greedy-revenue/: Cargo.toml
crates/scheduler-greedy-revenue/src/: lib.rs
crates/scheduler-greedy-throughput/: Cargo.toml
crates/scheduler-greedy-throughput/src/: lib.rs
crates/scheduler-greedy/src/: lib.rs
crates/schedulers/: Cargo.toml
crates/schedulers/src/: greedy.rs  shared.rs
crates/schedulers/src/events/: emitter.rs  model.rs
