[package]
name = "agave-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
testing = ["dep:bincode", "dep:solana-transaction"]

[dependencies]
agave-feature-set = { workspace = true, features = ["agave-unstable-api"] }
agave-scheduler-bindings.workspace = true
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view.workspace = true
bincode = { workspace = true, optional = true }
metrics.workspace = true
rts-alloc.workspace = true
shaq.workspace = true
slotmap.workspace = true
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-packet.workspace = true
solana-pubkey.workspace = true
solana-transaction = { workspace = true, optional = true, features = ["serde"] }
