[package]
name = "agave-schedulers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-bridge.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
solana-clock.workspace = true
solana-signature.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio.workspace = true

[dev-dependencies]
agave-bridge = { workspace = true, features = ["testing"] }
bincode.workspace = true
expect-test.workspace = true
serde_json.workspace = true
solana-compute-budget-interface.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-system-transaction.workspace = true
solana-transaction = { workspace = true, features = ["bincode", "serde"] }
